; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_time.c_microtime_with_abstime.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_time.c_microtime_with_abstime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @microtime_with_abstime(%struct.timeval* %0, i32* %1) #0 {
  %3 = alloca %struct.timeval*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.timeval* %0, %struct.timeval** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @clock_get_calendar_absolute_and_microtime(i32* %5, i32* %6, i32* %7)
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.timeval*, %struct.timeval** %3, align 8
  %11 = getelementptr inbounds %struct.timeval, %struct.timeval* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.timeval*, %struct.timeval** %3, align 8
  %14 = getelementptr inbounds %struct.timeval, %struct.timeval* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  ret void
}

declare dso_local i32 @clock_get_calendar_absolute_and_microtime(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
